HW3/lib/frontend/parser.output
Grammar

    0 $accept: PROG $end

    1 PROG: MAINMETHOD CLASSDECLLIST

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' VARDECLLIST STMLIST '}'

    3 VARDECLLIST: ε
    4            | VARDECL VARDECLLIST

    5 VARDECL: CLASS ID ID ';'
    6        | INT ID ';'
    7        | INT ID '=' CONST ';'
    8        | INT '[' ']' ID ';'
    9        | INT '[' ']' ID '=' '{' CONSTLIST '}' ';'
   10        | INT '[' NONNEGATIVEINT ']' ID ';'
   11        | INT '[' NONNEGATIVEINT ']' ID '=' '{' CONSTLIST '}' ';'

   12 CONST: NONNEGATIVEINT
   13      | MINUS NONNEGATIVEINT

   14 CONSTLIST: ε
   15          | CONST CONSTREST

   16 CONSTREST: ε
   17          | ',' CONST CONSTREST

   18 STMLIST: ε
   19        | STM STMLIST

   20 STM: '{' STMLIST '}'
   21    | IF '(' EXP ')' STM
   22    | IF '(' EXP ')' STM ELSE STM
   23    | WHILE '(' EXP ')' STM
   24    | WHILE '(' EXP ')' ';'
   25    | EXP '=' EXP ';'
   26    | EXP '.' ID '(' EXPLIST ')' ';'
   27    | CONTINUE ';'
   28    | BREAK ';'
   29    | RETURN EXP ';'
   30    | PUTINT '(' EXP ')' ';'
   31    | PUTCH '(' EXP ')' ';'
   32    | PUTARRAY '(' EXP ',' EXP ')' ';'
   33    | STARTTIME '(' ')' ';'
   34    | STOPTIME '(' ')' ';'

   35 EXP: NONNEGATIVEINT
   36    | TRUE
   37    | FALSE
   38    | LENGTH '(' EXP ')'
   39    | GETINT '(' ')'
   40    | GETCH '(' ')'
   41    | GETARRAY '(' EXP ')'
   42    | ID
   43    | THIS
   44    | EXP ADD EXP
   45    | EXP MINUS EXP
   46    | EXP TIMES EXP
   47    | EXP DIVIDE EXP
   48    | EXP EQ EXP
   49    | EXP NE EXP
   50    | EXP LT EXP
   51    | EXP LE EXP
   52    | EXP GT EXP
   53    | EXP GE EXP
   54    | EXP AND EXP
   55    | EXP OR EXP
   56    | NOT EXP
   57    | MINUS EXP
   58    | '(' EXP ')'
   59    | '(' '{' STMLIST '}' EXP ')'
   60    | EXP '.' ID
   61    | EXP '.' ID '(' EXPLIST ')'
   62    | EXP '[' EXP ']'

   63 EXPLIST: ε
   64        | EXP EXPREST

   65 EXPREST: ε
   66        | ',' EXP EXPREST

   67 CLASSDECLLIST: ε
   68              | CLASSDECL CLASSDECLLIST

   69 CLASSDECL: PUBLIC CLASS ID '{' VARDECLLIST METHODDECLLIST '}'
   70          | PUBLIC CLASS ID EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'

   71 METHODDECLLIST: ε
   72               | METHODDECL METHODDECLLIST

   73 METHODDECL: PUBLIC TYPE ID '(' FORMALLIST ')' '{' VARDECLLIST STMLIST '}'

   74 TYPE: CLASS ID
   75     | INT
   76     | INT '[' ']'

   77 FORMALLIST: ε
   78           | TYPE ID FORMALREST

   79 FORMALREST: ε
   80           | ',' TYPE ID FORMALREST

   81 ID: IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 2 21 22 23 24 26 30 31 32 33 34 38 39 40 41 58 59 61 73
    ')' (41) 2 21 22 23 24 26 30 31 32 33 34 38 39 40 41 58 59 61 73
    ',' (44) 17 32 66 80
    '.' (46) 26 60 61
    ';' (59) 5 6 7 8 9 10 11 24 25 26 27 28 29 30 31 32 33 34
    '=' (61) 7 9 11 25
    '[' (91) 8 9 10 11 62 76
    ']' (93) 8 9 10 11 62 76
    '{' (123) 2 9 11 20 59 69 70 73
    '}' (125) 2 9 11 20 59 69 70 73
    error (256)
    PUBLIC (258) 2 69 70 73
    INT (259) 2 6 7 8 9 10 11 75 76
    MAIN (260) 2
    RETURN (261) 29
    CLASS (262) 5 69 70 74
    IF (263) 21 22
    ELSE (264) 22
    WHILE (265) 23 24
    CONTINUE (266) 27
    BREAK (267) 28
    EXTENDS (268) 70
    TRUE (269) 36
    FALSE (270) 37
    THIS (271) 43
    LENGTH (272) 38
    GETINT (273) 39
    GETCH (274) 40
    GETARRAY (275) 41
    PUTINT (276) 30
    PUTCH (277) 31
    PUTARRAY (278) 32
    STARTTIME (279) 33
    STOPTIME (280) 34
    ADD (281) 44
    MINUS (282) 13 45 57
    TIMES (283) 46
    DIVIDE (284) 47
    EQ (285) 48
    NE (286) 49
    LT (287) 50
    LE (288) 51
    GT (289) 52
    GE (290) 53
    AND (291) 54
    OR (292) 55
    NOT (293) 56
    NONNEGATIVEINT <i> (294) 10 11 12 13 35
    IDENTIFIER <s> (295) 81
    IFX (296)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    PROG <program> (53)
        on left: 1
        on right: 0
    MAINMETHOD <mainMethod> (54)
        on left: 2
        on right: 1
    VARDECLLIST <varDeclList> (55)
        on left: 3 4
        on right: 2 4 69 70 73
    VARDECL <varDecl> (56)
        on left: 5 6 7 8 9 10 11
        on right: 4
    CONST <intExp> (57)
        on left: 12 13
        on right: 7 15 17
    CONSTLIST <intExpList> (58)
        on left: 14 15
        on right: 9 11
    CONSTREST <intExpList> (59)
        on left: 16 17
        on right: 15 17
    STMLIST <stmList> (60)
        on left: 18 19
        on right: 2 19 20 59 73
    STM <stm> (61)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 19 21 22 23
    EXP <exp> (62)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 21 22 23 24 25 26 29 30 31 32 38 41 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 64 66
    EXPLIST <expList> (63)
        on left: 63 64
        on right: 26 61
    EXPREST <expList> (64)
        on left: 65 66
        on right: 64 66
    CLASSDECLLIST <classDeclList> (65)
        on left: 67 68
        on right: 1 68
    CLASSDECL <classDecl> (66)
        on left: 69 70
        on right: 68
    METHODDECLLIST <methodDeclList> (67)
        on left: 71 72
        on right: 69 70 72
    METHODDECL <methodDecl> (68)
        on left: 73
        on right: 72
    TYPE <type> (69)
        on left: 74 75 76
        on right: 73 78 80
    FORMALLIST <formalList> (70)
        on left: 77 78
        on right: 73
    FORMALREST <formalList> (71)
        on left: 79 80
        on right: 78 80
    ID <idExp> (72)
        on left: 81
        on right: 5 6 7 8 9 10 11 26 42 60 61 69 70 73 74 78 80


State 0

    0 $accept: • PROG $end

    PUBLIC  shift, and go to state 1

    PROG        go to state 2
    MAINMETHOD  go to state 3


State 1

    2 MAINMETHOD: PUBLIC • INT MAIN '(' ')' '{' VARDECLLIST STMLIST '}'

    INT  shift, and go to state 4


State 2

    0 $accept: PROG • $end

    $end  shift, and go to state 5


State 3

    1 PROG: MAINMETHOD • CLASSDECLLIST

    PUBLIC  shift, and go to state 6

    $default  reduce using rule 67 (CLASSDECLLIST)

    CLASSDECLLIST  go to state 7
    CLASSDECL      go to state 8


State 4

    2 MAINMETHOD: PUBLIC INT • MAIN '(' ')' '{' VARDECLLIST STMLIST '}'

    MAIN  shift, and go to state 9


State 5

    0 $accept: PROG $end •

    $default  accept


State 6

   69 CLASSDECL: PUBLIC • CLASS ID '{' VARDECLLIST METHODDECLLIST '}'
   70          | PUBLIC • CLASS ID EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'

    CLASS  shift, and go to state 10


State 7

    1 PROG: MAINMETHOD CLASSDECLLIST •

    $default  reduce using rule 1 (PROG)


State 8

   68 CLASSDECLLIST: CLASSDECL • CLASSDECLLIST

    PUBLIC  shift, and go to state 6

    $default  reduce using rule 67 (CLASSDECLLIST)

    CLASSDECLLIST  go to state 11
    CLASSDECL      go to state 8


State 9

    2 MAINMETHOD: PUBLIC INT MAIN • '(' ')' '{' VARDECLLIST STMLIST '}'

    '('  shift, and go to state 12


State 10

   69 CLASSDECL: PUBLIC CLASS • ID '{' VARDECLLIST METHODDECLLIST '}'
   70          | PUBLIC CLASS • ID EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'

    IDENTIFIER  shift, and go to state 13

    ID  go to state 14


State 11

   68 CLASSDECLLIST: CLASSDECL CLASSDECLLIST •

    $default  reduce using rule 68 (CLASSDECLLIST)


State 12

    2 MAINMETHOD: PUBLIC INT MAIN '(' • ')' '{' VARDECLLIST STMLIST '}'

    ')'  shift, and go to state 15


State 13

   81 ID: IDENTIFIER •

    $default  reduce using rule 81 (ID)


State 14

   69 CLASSDECL: PUBLIC CLASS ID • '{' VARDECLLIST METHODDECLLIST '}'
   70          | PUBLIC CLASS ID • EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'

    EXTENDS  shift, and go to state 16
    '{'      shift, and go to state 17


State 15

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' • '{' VARDECLLIST STMLIST '}'

    '{'  shift, and go to state 18


State 16

   70 CLASSDECL: PUBLIC CLASS ID EXTENDS • ID '{' VARDECLLIST METHODDECLLIST '}'

    IDENTIFIER  shift, and go to state 13

    ID  go to state 19


State 17

   69 CLASSDECL: PUBLIC CLASS ID '{' • VARDECLLIST METHODDECLLIST '}'

    INT    shift, and go to state 20
    CLASS  shift, and go to state 21

    $default  reduce using rule 3 (VARDECLLIST)

    VARDECLLIST  go to state 22
    VARDECL      go to state 23


State 18

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' • VARDECLLIST STMLIST '}'

    INT    shift, and go to state 20
    CLASS  shift, and go to state 21

    $default  reduce using rule 3 (VARDECLLIST)

    VARDECLLIST  go to state 24
    VARDECL      go to state 23


State 19

   70 CLASSDECL: PUBLIC CLASS ID EXTENDS ID • '{' VARDECLLIST METHODDECLLIST '}'

    '{'  shift, and go to state 25


State 20

    6 VARDECL: INT • ID ';'
    7        | INT • ID '=' CONST ';'
    8        | INT • '[' ']' ID ';'
    9        | INT • '[' ']' ID '=' '{' CONSTLIST '}' ';'
   10        | INT • '[' NONNEGATIVEINT ']' ID ';'
   11        | INT • '[' NONNEGATIVEINT ']' ID '=' '{' CONSTLIST '}' ';'

    '['         shift, and go to state 26
    IDENTIFIER  shift, and go to state 13

    ID  go to state 27


State 21

    5 VARDECL: CLASS • ID ID ';'

    IDENTIFIER  shift, and go to state 13

    ID  go to state 28


State 22

   69 CLASSDECL: PUBLIC CLASS ID '{' VARDECLLIST • METHODDECLLIST '}'

    PUBLIC  shift, and go to state 29

    $default  reduce using rule 71 (METHODDECLLIST)

    METHODDECLLIST  go to state 30
    METHODDECL      go to state 31


State 23

    4 VARDECLLIST: VARDECL • VARDECLLIST

    INT    shift, and go to state 20
    CLASS  shift, and go to state 21

    $default  reduce using rule 3 (VARDECLLIST)

    VARDECLLIST  go to state 32
    VARDECL      go to state 23


State 24

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' VARDECLLIST • STMLIST '}'

    RETURN          shift, and go to state 33
    IF              shift, and go to state 34
    WHILE           shift, and go to state 35
    CONTINUE        shift, and go to state 36
    BREAK           shift, and go to state 37
    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    PUTINT          shift, and go to state 45
    PUTCH           shift, and go to state 46
    PUTARRAY        shift, and go to state 47
    STARTTIME       shift, and go to state 48
    STOPTIME        shift, and go to state 49
    '('             shift, and go to state 50
    '{'             shift, and go to state 51
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    $default  reduce using rule 18 (STMLIST)

    STMLIST  go to state 55
    STM      go to state 56
    EXP      go to state 57
    ID       go to state 58


State 25

   70 CLASSDECL: PUBLIC CLASS ID EXTENDS ID '{' • VARDECLLIST METHODDECLLIST '}'

    INT    shift, and go to state 20
    CLASS  shift, and go to state 21

    $default  reduce using rule 3 (VARDECLLIST)

    VARDECLLIST  go to state 59
    VARDECL      go to state 23


State 26

    8 VARDECL: INT '[' • ']' ID ';'
    9        | INT '[' • ']' ID '=' '{' CONSTLIST '}' ';'
   10        | INT '[' • NONNEGATIVEINT ']' ID ';'
   11        | INT '[' • NONNEGATIVEINT ']' ID '=' '{' CONSTLIST '}' ';'

    ']'             shift, and go to state 60
    NONNEGATIVEINT  shift, and go to state 61


State 27

    6 VARDECL: INT ID • ';'
    7        | INT ID • '=' CONST ';'

    '='  shift, and go to state 62
    ';'  shift, and go to state 63


State 28

    5 VARDECL: CLASS ID • ID ';'

    IDENTIFIER  shift, and go to state 13

    ID  go to state 64


State 29

   73 METHODDECL: PUBLIC • TYPE ID '(' FORMALLIST ')' '{' VARDECLLIST STMLIST '}'

    INT    shift, and go to state 65
    CLASS  shift, and go to state 66

    TYPE  go to state 67


State 30

   69 CLASSDECL: PUBLIC CLASS ID '{' VARDECLLIST METHODDECLLIST • '}'

    '}'  shift, and go to state 68


State 31

   72 METHODDECLLIST: METHODDECL • METHODDECLLIST

    PUBLIC  shift, and go to state 29

    $default  reduce using rule 71 (METHODDECLLIST)

    METHODDECLLIST  go to state 69
    METHODDECL      go to state 31


State 32

    4 VARDECLLIST: VARDECL VARDECLLIST •

    $default  reduce using rule 4 (VARDECLLIST)


State 33

   29 STM: RETURN • EXP ';'

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 70
    ID   go to state 58


State 34

   21 STM: IF • '(' EXP ')' STM
   22    | IF • '(' EXP ')' STM ELSE STM

    '('  shift, and go to state 71


State 35

   23 STM: WHILE • '(' EXP ')' STM
   24    | WHILE • '(' EXP ')' ';'

    '('  shift, and go to state 72


State 36

   27 STM: CONTINUE • ';'

    ';'  shift, and go to state 73


State 37

   28 STM: BREAK • ';'

    ';'  shift, and go to state 74


State 38

   36 EXP: TRUE •

    $default  reduce using rule 36 (EXP)


State 39

   37 EXP: FALSE •

    $default  reduce using rule 37 (EXP)


State 40

   43 EXP: THIS •

    $default  reduce using rule 43 (EXP)


State 41

   38 EXP: LENGTH • '(' EXP ')'

    '('  shift, and go to state 75


State 42

   39 EXP: GETINT • '(' ')'

    '('  shift, and go to state 76


State 43

   40 EXP: GETCH • '(' ')'

    '('  shift, and go to state 77


State 44

   41 EXP: GETARRAY • '(' EXP ')'

    '('  shift, and go to state 78


State 45

   30 STM: PUTINT • '(' EXP ')' ';'

    '('  shift, and go to state 79


State 46

   31 STM: PUTCH • '(' EXP ')' ';'

    '('  shift, and go to state 80


State 47

   32 STM: PUTARRAY • '(' EXP ',' EXP ')' ';'

    '('  shift, and go to state 81


State 48

   33 STM: STARTTIME • '(' ')' ';'

    '('  shift, and go to state 82


State 49

   34 STM: STOPTIME • '(' ')' ';'

    '('  shift, and go to state 83


State 50

   58 EXP: '(' • EXP ')'
   59    | '(' • '{' STMLIST '}' EXP ')'

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    '{'             shift, and go to state 84
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 85
    ID   go to state 58


State 51

   20 STM: '{' • STMLIST '}'

    RETURN          shift, and go to state 33
    IF              shift, and go to state 34
    WHILE           shift, and go to state 35
    CONTINUE        shift, and go to state 36
    BREAK           shift, and go to state 37
    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    PUTINT          shift, and go to state 45
    PUTCH           shift, and go to state 46
    PUTARRAY        shift, and go to state 47
    STARTTIME       shift, and go to state 48
    STOPTIME        shift, and go to state 49
    '('             shift, and go to state 50
    '{'             shift, and go to state 51
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    $default  reduce using rule 18 (STMLIST)

    STMLIST  go to state 86
    STM      go to state 56
    EXP      go to state 57
    ID       go to state 58


State 52

   57 EXP: MINUS • EXP

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 87
    ID   go to state 58


State 53

   56 EXP: NOT • EXP

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 88
    ID   go to state 58


State 54

   35 EXP: NONNEGATIVEINT •

    $default  reduce using rule 35 (EXP)


State 55

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' VARDECLLIST STMLIST • '}'

    '}'  shift, and go to state 89


State 56

   19 STMLIST: STM • STMLIST

    RETURN          shift, and go to state 33
    IF              shift, and go to state 34
    WHILE           shift, and go to state 35
    CONTINUE        shift, and go to state 36
    BREAK           shift, and go to state 37
    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    PUTINT          shift, and go to state 45
    PUTCH           shift, and go to state 46
    PUTARRAY        shift, and go to state 47
    STARTTIME       shift, and go to state 48
    STOPTIME        shift, and go to state 49
    '('             shift, and go to state 50
    '{'             shift, and go to state 51
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    $default  reduce using rule 18 (STMLIST)

    STMLIST  go to state 90
    STM      go to state 56
    EXP      go to state 57
    ID       go to state 58


State 57

   25 STM: EXP • '=' EXP ';'
   26    | EXP • '.' ID '(' EXPLIST ')' ';'
   44 EXP: EXP • ADD EXP
   45    | EXP • MINUS EXP
   46    | EXP • TIMES EXP
   47    | EXP • DIVIDE EXP
   48    | EXP • EQ EXP
   49    | EXP • NE EXP
   50    | EXP • LT EXP
   51    | EXP • LE EXP
   52    | EXP • GT EXP
   53    | EXP • GE EXP
   54    | EXP • AND EXP
   55    | EXP • OR EXP
   60    | EXP • '.' ID
   61    | EXP • '.' ID '(' EXPLIST ')'
   62    | EXP • '[' EXP ']'

    '['     shift, and go to state 91
    '='     shift, and go to state 92
    '.'     shift, and go to state 93
    ADD     shift, and go to state 94
    MINUS   shift, and go to state 95
    TIMES   shift, and go to state 96
    DIVIDE  shift, and go to state 97
    EQ      shift, and go to state 98
    NE      shift, and go to state 99
    LT      shift, and go to state 100
    LE      shift, and go to state 101
    GT      shift, and go to state 102
    GE      shift, and go to state 103
    AND     shift, and go to state 104
    OR      shift, and go to state 105


State 58

   42 EXP: ID •

    $default  reduce using rule 42 (EXP)


State 59

   70 CLASSDECL: PUBLIC CLASS ID EXTENDS ID '{' VARDECLLIST • METHODDECLLIST '}'

    PUBLIC  shift, and go to state 29

    $default  reduce using rule 71 (METHODDECLLIST)

    METHODDECLLIST  go to state 106
    METHODDECL      go to state 31


State 60

    8 VARDECL: INT '[' ']' • ID ';'
    9        | INT '[' ']' • ID '=' '{' CONSTLIST '}' ';'

    IDENTIFIER  shift, and go to state 13

    ID  go to state 107


State 61

   10 VARDECL: INT '[' NONNEGATIVEINT • ']' ID ';'
   11        | INT '[' NONNEGATIVEINT • ']' ID '=' '{' CONSTLIST '}' ';'

    ']'  shift, and go to state 108


State 62

    7 VARDECL: INT ID '=' • CONST ';'

    MINUS           shift, and go to state 109
    NONNEGATIVEINT  shift, and go to state 110

    CONST  go to state 111


State 63

    6 VARDECL: INT ID ';' •

    $default  reduce using rule 6 (VARDECL)


State 64

    5 VARDECL: CLASS ID ID • ';'

    ';'  shift, and go to state 112


State 65

   75 TYPE: INT •
   76     | INT • '[' ']'

    '['  shift, and go to state 113

    $default  reduce using rule 75 (TYPE)


State 66

   74 TYPE: CLASS • ID

    IDENTIFIER  shift, and go to state 13

    ID  go to state 114


State 67

   73 METHODDECL: PUBLIC TYPE • ID '(' FORMALLIST ')' '{' VARDECLLIST STMLIST '}'

    IDENTIFIER  shift, and go to state 13

    ID  go to state 115


State 68

   69 CLASSDECL: PUBLIC CLASS ID '{' VARDECLLIST METHODDECLLIST '}' •

    $default  reduce using rule 69 (CLASSDECL)


State 69

   72 METHODDECLLIST: METHODDECL METHODDECLLIST •

    $default  reduce using rule 72 (METHODDECLLIST)


State 70

   29 STM: RETURN EXP • ';'
   44 EXP: EXP • ADD EXP
   45    | EXP • MINUS EXP
   46    | EXP • TIMES EXP
   47    | EXP • DIVIDE EXP
   48    | EXP • EQ EXP
   49    | EXP • NE EXP
   50    | EXP • LT EXP
   51    | EXP • LE EXP
   52    | EXP • GT EXP
   53    | EXP • GE EXP
   54    | EXP • AND EXP
   55    | EXP • OR EXP
   60    | EXP • '.' ID
   61    | EXP • '.' ID '(' EXPLIST ')'
   62    | EXP • '[' EXP ']'

    '['     shift, and go to state 91
    ';'     shift, and go to state 116
    '.'     shift, and go to state 117
    ADD     shift, and go to state 94
    MINUS   shift, and go to state 95
    TIMES   shift, and go to state 96
    DIVIDE  shift, and go to state 97
    EQ      shift, and go to state 98
    NE      shift, and go to state 99
    LT      shift, and go to state 100
    LE      shift, and go to state 101
    GT      shift, and go to state 102
    GE      shift, and go to state 103
    AND     shift, and go to state 104
    OR      shift, and go to state 105


State 71

   21 STM: IF '(' • EXP ')' STM
   22    | IF '(' • EXP ')' STM ELSE STM

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 118
    ID   go to state 58


State 72

   23 STM: WHILE '(' • EXP ')' STM
   24    | WHILE '(' • EXP ')' ';'

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 119
    ID   go to state 58


State 73

   27 STM: CONTINUE ';' •

    $default  reduce using rule 27 (STM)


State 74

   28 STM: BREAK ';' •

    $default  reduce using rule 28 (STM)


State 75

   38 EXP: LENGTH '(' • EXP ')'

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 120
    ID   go to state 58


State 76

   39 EXP: GETINT '(' • ')'

    ')'  shift, and go to state 121


State 77

   40 EXP: GETCH '(' • ')'

    ')'  shift, and go to state 122


State 78

   41 EXP: GETARRAY '(' • EXP ')'

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 123
    ID   go to state 58


State 79

   30 STM: PUTINT '(' • EXP ')' ';'

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 124
    ID   go to state 58


State 80

   31 STM: PUTCH '(' • EXP ')' ';'

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 125
    ID   go to state 58


State 81

   32 STM: PUTARRAY '(' • EXP ',' EXP ')' ';'

    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    '('             shift, and go to state 50
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    EXP  go to state 126
    ID   go to state 58


State 82

   33 STM: STARTTIME '(' • ')' ';'

    ')'  shift, and go to state 127


State 83

   34 STM: STOPTIME '(' • ')' ';'

    ')'  shift, and go to state 128


State 84

   59 EXP: '(' '{' • STMLIST '}' EXP ')'

    RETURN          shift, and go to state 33
    IF              shift, and go to state 34
    WHILE           shift, and go to state 35
    CONTINUE        shift, and go to state 36
    BREAK           shift, and go to state 37
    TRUE            shift, and go to state 38
    FALSE           shift, and go to state 39
    THIS            shift, and go to state 40
    LENGTH          shift, and go to state 41
    GETINT          shift, and go to state 42
    GETCH           shift, and go to state 43
    GETARRAY        shift, and go to state 44
    PUTINT          shift, and go to state 45
    PUTCH           shift, and go to state 46
    PUTARRAY        shift, and go to state 47
    STARTTIME       shift, and go to state 48
    STOPTIME        shift, and go to state 49
    '('             shift, and go to state 50
    '{'             shift, and go to state 51
    MINUS           shift, and go to state 52
    NOT             shift, and go to state 53
    NONNEGATIVEINT  shift, and go to state 54
    IDENTIFIER      shift, and go to state 13

    $default  reduce using rule 18 (STMLIST)

    STMLIST  go to state 129
    STM      go to state 56
    EXP      go to state 57
    ID       go to state 58


State 85

   44 EXP: EXP • ADD EXP
   45    | EXP • MINUS EXP
   46    | EXP • TIMES EXP
   47    | EXP • DIVIDE EXP
   48    | EXP • EQ EXP
   49    | EXP • NE EXP
   50    | EXP • LT EXP
   51    | EXP • LE EXP
   52    | EXP • GT EXP
   53    | EXP • GE EXP
   54    | EXP • AND EXP
   55    | EXP • OR EXP
   58    | '(' EXP • ')'
   60    | EXP • '.' ID
   61    | EXP • '.' ID '(' EXPLIST ')'
   62    | EXP • '[' EXP ']'

    ')'     shift, and go to state 130
    '['     shift, and go to state 91
    '.'     shift, and go to state 117
    ADD     shift, and go to state 94
    MINUS   shift, and go to state 95
    TIMES   shift, and go to state 96
    DIVIDE  shift, and go to state 97
    EQ      shift, and go to state 98
    NE      shift, and go to state 99
    LT      shift, and go to state 100
    LE      shift, and go to state 101
    GT      shift, and go to state 102
    GE      shift, and go to state 103
    AND     shift, and go to state 104
    OR      shift, and go to state 105


State 86

   20 STM: '{' STMLIST • '}'

    '}'  shift, and go to state 131


State 87

   44 EXP: EXP • ADD EXP
   45    | EXP • MINUS EXP
   46    | EXP • TIMES EXP
   47    | EXP • DIVIDE EXP
   48    | EXP • EQ EXP
   49    | EXP • NE EXP
   50    | EXP • LT EXP
   51    | EXP • LE EXP
   52    | EXP • GT EXP
   53    | EXP • GE EXP
   54    | EXP • AND EXP
   55    | EXP • OR EXP
   57    | MINUS EXP •
   60    | EXP • '.' ID
   61    | EXP • '.' ID '(' EXPLIST ')'
   62    | EXP • '[' EXP ']'
